Integrate the tab tag as a single model!

--- a/src/html/tab/tab_simple.html
+++ b/src/html/tab/tab_simple.html
@@ -33,17 +33,17 @@
 			.tab1 {
 				height: 400px;
 				width: 100%;
-				background-image: url(../img/woman.jpg);
+				background-image: url(../tab/img/woman.jpg);
 			}
 			.tab2 {
 				height: 400px;
 				width: 100%;
-				background-image: url(../img/man.jpg);
+				background-image: url(../tab/img/man.jpg);
 				display: none;
 			}
 		</style>
 
-		<script src="../js/jquery-1.7.min.js"></script>
+		<script src="../../js/jquery-1.7.min.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function() {
                  $("div.left").click(function(){
