--- a/src/html/tab/tab_organic.html
+++ b/src/html/tab/tab_organic.html
@@ -3,9 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>jQuery tab标签列表 - 16素材网</title>
-	<link rel="stylesheet" href="../css/organictabs.css">
-	<script src='../js/jquery.min.js'></script>
-	<script src="../js/organictabs.jquery.js"></script>
+	<link rel="stylesheet" href="../tab/css/organictabs.css">
+	<script src='../../js/jquery.min.js'></script>
+	<script src="../../js/organictabs.jquery.js"></script>
 	<script>
 		$(function() {
 		
