Integrate the tab tag as a single model

--- a/src/html/tab/tab.html
+++ b/src/html/tab/tab.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>子衿购物-中国第一自主创业服务平台</title>
+		<title>Widget-使用Jquery动态生成多个Tabs</title>
 		<style type="text/css">
 			.buttons {
 				height: 100px;
