--- a/src/html/tab/tab_search.html
+++ b/src/html/tab/tab_search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>原生tab切换搜索类型(类似天猫、京东搜索框)样式</title>
+    <title>Widget-原生tab切换搜索类型(类似天猫、京东搜索框)样式</title>
     <style>
     *{margin:0;padding:0;list-style:none;}
     .lanren-search-form{width:575px;margin:100px auto;overflow: hidden;}
