--- a/src/html/tab/tab_simple.html
+++ b/src/html/tab/tab_simple.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>子衿购物-中国第一自主创业服务平台</title>
+		<title>Widget-简单的左右Tab</title>
 		<style type="text/css">
 			.niuniu {
 				height: 100px;
