--- a/src/html/tab/tab_organic.html
+++ b/src/html/tab/tab_organic.html
@@ -5,7 +5,7 @@
 	<title>Widget-JQuery Tab标签列表 </title>
 	<link rel="stylesheet" href="../tab/css/organictabs.css">
 	<script src='../../js/jquery.min.js'></script>
-	<script src="../../js/organictabs.jquery.js"></script>
+	<script src="../tab/js/organictabs.jquery.js"></script>
 	<script>
 		$(function() {
 		
